# electronics-hal

./: .dockerignore  .gitlab-ci.yml  Dockerfile  IMPROVEMENT_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  docker-compose.yml  hal_verification.py  integration_test.py  phase2_test.py  phase3_verification.py  pyproject.toml  pytest.ini.backup  test_results.db  test_rohde_schwarz.py
.github/workflows/: ci.yml
config/: config.yml.example
docker/: README.md  docker-compose.dev.yml
examples/: create_sample_data_and_report.py  generate_sample_report.py  phase3_demo.py
hal/: __init__.py  config_loader.py  config_models.py  database_manager.py  discovery.py  file_storage_manager.py  interfaces.py  logging_config.py  retry_utils.py  visa_instrument.py
hal/drivers/: keysight_33500_series.py  keysight_34461a.py  keysight_dsox1000_series.py  keysight_e36100_series.py  rohde_schwarz_fsv.py  rohde_schwarz_fswp.py  rohde_schwarz_sma100a.py
hal/monitoring/: __init__.py  dashboard_server.py  metrics_collector.py
hal/performance/: __init__.py  cache_manager.py  profiler.py
hal/reports/: __init__.py  __main__.py  base.py  cli.py  generators.py  models.py  report_manager.py
hal/scenario/: __init__.py  manager.py  models.py  player.py  recorder.py
hal/simulation/: __init__.py  behavioral_models.py  simulator_engine.py
reports/: cli_generated_report.html  cli_generated_report.json  specific_run_report.json  test_report_demo-tes_20250928_083227.html  test_report_demo-tes_20250928_083227.json  test_report_demo-tes_20250928_192326.html  test_report_demo-tes_20250928_192326.json  test_report_demo-tes_20250928_210146.html  test_report_demo-tes_20250928_210146.json
test_data/demo-test-run-2024/: metadata.json
tests/: conftest.py
tests/integration/: test_report_integration.py
tests/unit/: test_config_validation.py  test_report_generation.py
(+24 files in other folders)
